--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.12",
     "@types/express-session": "^1.17.3",
     "@types/node": "^15.12.2",
+    "@types/nodemailer": "^6.4.2",
     "@types/redis": "^2.8.29",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.5.0",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
